export interface NotificationId {
  readonly value: string
}
